Fix spelling error in snake.html script attribute; Prepare to implement module

--- a/Snake.html
+++ b/Snake.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <script type="application/javasricpt" src="../../Graphical Apps/Draw.js"></script>
-        <script type="application/javasricpt" src="Snake.js"></script>
+        <!-- <script type="application/javasricpt" src="../../Graphical Apps/draw.js"></script> -->
+        <script type="application/javascript" src="snake.js"></script>
         <script>
             // checkIfLoaded();
+            // alert('script loaded');
         </script>
     </head>
     <body>
-        <button onclick="checkIfLoaded()">Check Draw Service</button>
+        <button onclick="checkIfServiceLoaded()">Check Draw Service</button>
         <canvas style="background-color: lightgray; width: 100%; height: 100%;"></canvas>
     </body>
 </html>
