--- a/Snake.html
+++ b/Snake.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <!-- <script type="application/javasricpt" src="../../Graphical Apps/draw.js"></script> -->
-        <script type="application/javascript" src="snake.js"></script>
-        <script>
-            // checkIfLoaded();
-            // alert('script loaded');
-        </script>
+        <!-- <script type="module" src="../draw.js"></script>
+        <script type="module" src="snake.js"></script> -->
+        <!-- <script type="application/javascript" src="snake.js"></script> -->
     </head>
     <body>
-        <button onclick="checkIfServiceLoaded()">Check Draw Service</button>
+        <button id="checkButton">Check Draw Service</button>
         <canvas style="background-color: lightgray; width: 100%; height: 100%;"></canvas>
+
+
+        <script type="module" src="../draw.js"></script>
+        <script type="module" src="snake.js"></script>
     </body>
 </html>
