--- a/Snake.html
+++ b/Snake.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <button id="checkButton">Check Draw Service</button>
-        <canvas style="background-color: lightgray; width: 100%; height: 100%;"></canvas>
+        <canvas id="play-surface" style="background-color: lightgray; width: 100%; height: 100%;"></canvas>
 
 
         <script type="module" src="../draw.js"></script>
