Setup game loop, listen to keyup events, and update player direction

--- a/Snake.html
+++ b/Snake.html
@@ -6,7 +6,7 @@
         <!-- <script type="application/javascript" src="snake.js"></script> -->
     </head>
     <body>
-        <button id="checkButton">Check Draw Service</button>
+        <button id="start-button">Check Draw Service</button>
         <canvas id="play-surface" style="background-color: lightgray; width: 75%; height: 75%;"></canvas>
 
 
