Use GameConfig.gameSpeed to set speed of player; change canvas color scheme to high contrast

--- a/Snake.html
+++ b/Snake.html
@@ -6,8 +6,9 @@
         <!-- <script type="application/javascript" src="snake.js"></script> -->
     </head>
     <body>
-        <button id="start-button">Check Draw Service</button>
-        <canvas id="play-surface" style="background-color: lightgray; width: 75%; height: 75%;"></canvas>
+        <button id="start-button">Start Game</button>
+        <!-- <canvas id="play-surface" style="background-color: lightgray; width: 75%; height: 75%;"></canvas> -->
+        <canvas id="play-surface" style="background-color: black; width: 75%; height: 75%;"></canvas>
 
 
         <script type="module" src="../draw.js"></script>
