Add dark mode check box;

--- a/Snake.html
+++ b/Snake.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <button id="start-button">Start Game</button>
+        <input id="dark-mode-checkbox" type="checkbox">
+        <label>Dark Mode</label>
+        </br>
         <!-- <canvas id="play-surface" style="background-color: lightgray; width: 75%; height: 75%;"></canvas> -->
         <canvas id="play-surface" style="background-color: black; width: 75%; height: 75%;"></canvas>
 
