--- a/Snake.html
+++ b/Snake.html
@@ -11,7 +11,7 @@
         <label>Dark Mode</label>
         </br>
         <!-- <canvas id="play-surface" style="background-color: lightgray; width: 75%; height: 75%;"></canvas> -->
-        <canvas id="play-surface" style="background-color: black; width: 75%; height: 75%;"></canvas>
+        <canvas id="play-surface"></canvas>
 
 
         <script type="module" src="../draw.js"></script>
